tests/ui/parser/issues/issue-3036.rs
//@ run-rustfix

// Testing that semicolon tokens are printed correctly in errors

fn main() {
    let _x = 3 //~ ERROR: expected `;`
}
